--- a/Book_source/src/app/posts.component.html
+++ b/Book_source/src/app/posts.component.html
@@ -23,7 +23,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let snkChar of read | source:filterpost" >
+      <tr *ngFor="let snkChar of read" >
         <td scope="row">{{snkChar.bookId}} </td>
         <td>{{snkChar.title}}</td>
        <td>{{snkChar.authors}}</td>
