--- a/Book_source/src/app/app.component.html
+++ b/Book_source/src/app/app.component.html
@@ -1,40 +1,4 @@
-<div class="container">
-  <h1>Books</h1>
-  <div class="form-group">
-  
-    <input
-    type="text"
-    class="forms-control"
-    placeholder="Buscar.."
-    [(ngModel)]="filterpost"
-    name="filterpost"
-  />
-</div>
-<div class="container">
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>bookID</th>
-        <th>titlle</th>
-        <th>author</th>
-        <th>editorial</th>
-        <th> short_description
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let snkChar of read | source:filterpost" >
-        <td scope="row">{{snkChar.bookId}} </td>
-        <td>{{snkChar.title}}</td>
-       <td>{{snkChar.authors}}</td>
-       <td>{{snkChar.editorial}}</td>
-       <td>{{snkChar.short_description}}</td>
-       <td> </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
+<router-outlet></router-outlet>
 
 
 
